# AAU-Summit-XL-Documentation

./: .readthedocs.yaml  README.rst  pyproject.toml
catkin_ws/src/summit_packages_release_melodic-devel/command_manager/robot_command_scheduler/: CMakeLists.txt  README.md  setup.py
catkin_ws/src/summit_packages_release_melodic-devel/command_manager/robot_command_scheduler/config/: scheduler.yaml  schedules.yaml
catkin_ws/src/summit_packages_release_melodic-devel/command_manager/robot_command_scheduler/launch/: robot_command_scheduler.launch
catkin_ws/src/summit_packages_release_melodic-devel/command_manager/robot_complex_command_sequencer/: CMakeLists.txt  README.md
catkin_ws/src/summit_packages_release_melodic-devel/command_manager/robot_complex_command_sequencer/config/: sequencer.yaml
catkin_ws/src/summit_packages_release_melodic-devel/command_manager/robot_complex_command_sequencer/launch/: robot_complex_command_sequencer.launch
catkin_ws/src/summit_packages_release_melodic-devel/command_manager/robot_simple_command_manager/: CMakeLists.txt  README.md  package.xml  setup.py
catkin_ws/src/summit_packages_release_melodic-devel/command_manager/robot_simple_command_manager/config/: handlers.yaml
catkin_ws/src/summit_packages_release_melodic-devel/command_manager/robot_simple_command_manager/launch/: robot_simple_command_manager.launch
catkin_ws/src/summit_packages_release_melodic-devel/command_manager/robot_simple_command_manager/scripts/: create_handler.sh  create_handlers_package.sh
catkin_ws/src/summit_packages_release_melodic-devel/command_manager/robot_simple_command_sequencer/: CMakeLists.txt  README.md  package.xml  setup.py
catkin_ws/src/summit_packages_release_melodic-devel/command_manager/robot_simple_command_sequencer/config/: sequences.yaml
catkin_ws/src/summit_packages_release_melodic-devel/command_manager/robot_simple_command_sequencer/launch/: robot_simple_command_sequencer.launch
catkin_ws/src/summit_packages_release_melodic-devel/localization/marker_mapping/: CMakeLists.txt  README.md
catkin_ws/src/summit_packages_release_melodic-devel/localization/marker_mapping/config/: frames.yaml  markers.yaml
catkin_ws/src/summit_packages_release_melodic-devel/localization/marker_mapping/launch/: frames_mapping.launch
catkin_ws/src/summit_packages_release_melodic-devel/localization/marker_mapping/msg/: FrameMappingStatus.msg  FrameStatus.msg
catkin_ws/src/summit_packages_release_melodic-devel/localization/marker_mapping/srv/: InitPoseFromFrame.srv  SaveFrame.srv  SetFrameId.srv
catkin_ws/src/summit_packages_release_melodic-devel/msgs/multimap_server_msgs/: CMakeLists.txt  package.xml
catkin_ws/src/summit_packages_release_melodic-devel/msgs/multimap_server_msgs/msg/: Environment.msg  Environments.msg
catkin_ws/src/summit_packages_release_melodic-devel/msgs/multimap_server_msgs/srv/: DumpMap.srv  LoadEnvironments.srv  LoadMap.srv  SaveMap.srv
catkin_ws/src/summit_packages_release_melodic-devel/msgs/procedures_msgs/: CMakeLists.txt
catkin_ws/src/summit_packages_release_melodic-devel/msgs/procedures_msgs/msg/: ProcedureHeader.msg  ProcedureResult.msg  ProcedureState.msg
catkin_ws/src/summit_packages_release_melodic-devel/msgs/procedures_msgs/srv/: ProcedureQuery.srv
catkin_ws/src/summit_packages_release_melodic-devel/msgs/robot_local_control_msgs/: CMakeLists.txt  package.xml
catkin_ws/src/summit_packages_release_melodic-devel/msgs/robot_local_control_msgs/msg/: Charge.msg  ControllerStatus.msg  Dock.msg  EnterLift.msg  FindMagneticGuide.msg  GoTo.msg  GoToGPS.msg  GoToNode.msg  GoToTag.msg  LeaveMagneticGuide.msg  LeaveShower.msg  LocalizationStatus.msg  MagneticGoTo.msg  MagneticPick.msg  MagneticPlace.msg  MissionCommand.msg  MissionParamBool.msg  MissionParamFloat.msg  MissionParamInt.msg  MissionParamString.msg  MissionStatus.msg  Missions.msg  Move.msg  NavigationStatus.msg  Pick.msg  PrePlace.msg  RobotStatus.msg  SensorStatus.msg  SetElevator.msg  SignalManager.msg  Status.msg  StatusArray.msg  SwitchMap.msg  Twist2D.msg  Uncharge.msg
catkin_ws/src/summit_packages_release_melodic-devel/msgs/robot_local_control_msgs/srv/: BatteryExchangePetition.srv  Cancel.srv  ChargePetition.srv  DockPetition.srv  EnterLiftPetition.srv  EnterShowerPetition.srv  FindMagneticGuidePetition.srv  GetEnvironment.srv  GoToGPSPetition.srv  GoToNodePetition.srv  GoToPetition.srv  GoToTagPetition.srv  LeaveLiftPetition.srv  LeaveMagneticGuidePetition.srv  LeaveShowerPetition.srv  MagneticGoToPetition.srv  MagneticNavigationPetition.srv  MagneticPickPetition.srv  (+22 more)
catkin_ws/src/summit_packages_release_melodic-devel/msgs/robot_simple_command_manager_msgs/: CMakeLists.txt  README.md
catkin_ws/src/summit_packages_release_melodic-devel/msgs/robotnik_navigation_msgs/: CMakeLists.txt
catkin_ws/src/summit_packages_release_melodic-devel/msgs/robotnik_signal_msgs/: CMakeLists.txt  README.md
catkin_ws/src/summit_packages_release_melodic-devel/others/fake_joint_position_publisher/: CMakeLists.txt  package.xml
catkin_ws/src/summit_packages_release_melodic-devel/others/system_monitor/: CMakeLists.txt  README.md  package.xml
catkin_ws/src/summit_packages_release_melodic-devel/robot_bringup/: CMakeLists.txt  README.md  package.xml
catkin_ws/src/summit_packages_release_melodic-devel/robot_bringup/controller/: 50-ds4drv.rules  ds4drv.conf  ds4drv.service
catkin_ws/src/summit_packages_release_melodic-devel/robot_bringup/scripts/: bringup-ros.service  bringup.sh  configure_bringup.sh  install_ps4_controller.sh  ros_config.sh
catkin_ws/src/summit_packages_release_melodic-devel/sensors/ce30_c_kinetic/: CMakeLists.txt
catkin_ws/src/summit_packages_release_melodic-devel/sensors/ira_laser_tools/: CMakeLists.txt
catkin_ws/src/summit_packages_release_melodic-devel/sensors/sick_s300_laser/: CMakeLists.txt
catkin_ws/src/summit_packages_release_melodic-devel/web/map_nav_manager/: CMakeLists.txt  README.md  setup.py
catkin_ws/src/summit_packages_release_melodic-devel/web/xmlrpc_server/: CHANGELOG.md  CMakeLists.txt  README.md  package.xml  setup.py
(+3259 files in other folders)
