<?xml version="1.0"?>
<package format="2">
  <name>robot_simple_command_manager</name>
  <version>0.1.0</version>
  <description>The robot_simple_command_manager package</description>

  <author email="aarnal@robotnik.es">Alex Arnal</author>
  <maintainer email="aarnal@robotnik.es">Alex Arnal</maintainer>

  <license>BSD</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>rcomponent</build_depend>
  <build_depend>robot_simple_command_manager_msgs</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>rcomponent</exec_depend>
  <exec_depend>robot_simple_command_manager_msgs</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
