<?xml version="1.0"?>
<package format="2">
  <name>xmlrpc_server</name>
  <version>0.3.0</version>
  <description>The xmlrpc_server package</description>

  <maintainer email="aarnal@robotnik.es">Alejandro Arnal</maintainer>


  <license>BSD</license>


  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>
  <depend>rospy_message_converter</depend>


  <export>

  </export>
</package>
