<?xml version="1.0"?>
<package format="2">
  <name>localization_checker</name>
  <version>0.0.0</version>
  <description>The localization_checker package</description>

  <maintainer email="mbosch@todo.todo">mbosch</maintainer>

  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>

  <depend>dynamic_reconfigure</depend>
  <depend>laser_geometry</depend>
  <depend>pcl_conversions</depend>
  <depend>pcl_ros</depend>
  <depend>roscpp</depend>
  <depend>tf</depend>
  <depend>tf_conversions</depend>
  <test_depend>rosunit</test_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
