<?xml version="1.0"?>
<package>
  <name>summit_xl_robot</name>
  <version>0.3.0</version>
  <description>Contains the robot hardware controller, robot status web server and robot bringup folder</description>

  <maintainer email="rguzman@robotnik.es">Robert</maintainer>

  <license>BSD</license>

  <url type="website">http://wiki.ros.org/Robots/SummitXL</url>
  <url type="bugtracker">https://github.com/RobotnikAutomation/summit_xl_robot/issues</url>

  <author email="info@robotnik.es">Robotnik</author>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
    <metapackage/>
  </export>
</package>
